--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,10 +14,10 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
             android:onClick="@{() -> viewModel.onShowFragment2Clicked()}"
             android:text="@string/go_to_user_profile"
             android:textAllCaps="false"
