Feature/base/navigation component (#13)
* Add base fragment implementation

* Add dependencies for navigation component and build version update

* Add Home fragment module with basic components

* Add my account fragment components

* Add home module di

* Add SingleLiveEvent.kt for event live data

* Add navigation component in project and use in HomeActivity.kt and in activity_home.xml

* Code refactoring

* Update res

* Update xml for home fragment

* Update MyAccountFragment.kt hit user API and show user email on UI

* UI update

--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -6,19 +6,19 @@
 
         <variable
             name="viewModel"
-            type="com.vishnu.workshopone.home.HomeViewModel" />
+            type="com.vishnu.workshopone.myaccount.MyAccountViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <androidx.core.widget.ContentLoadingProgressBar
             style="?android:attr/progressBarStyle"
+            isVisible="@{viewModel.isLoading}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:isVisible="@{viewModel.isLoading}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,22 +27,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.userLiveData.email}"
+            android:text="@{viewModel.userViewStateData.email}"
+            android:textColor="@color/dark_grey"
+            android:textSize="@dimen/dimen_15_sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/nav_host_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:defaultNavHost="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:navGraph="@navigation/nav_graph" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
