--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="dimen_15_sp">15sp</dimen>
+    <dimen name="dimen_8dp">8dp</dimen>
 </resources>
